[package]
name        = "expenses_tracker"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "expenses tracker: local first tui expenses tracker with p2p capabilities"

authors     = ["Ricardo Batista <ricardo.batista@hey.com>"]
categories  = ["expenses tracker", "local first", "p2p", "iroh"]

[dependencies]
tokio       = { version = "1.43.0", features = ["full"] }
sqlx        = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "macros", "migrate" ] }
iroh        = { version = "0.31.0" }
iroh-gossip = { version = "0.31.0" }
rand        = { version = "0.8.5" }
ratatui     = { version = "0.28.0" }
derive_more = { version = "1.0.0", features = [ "from" ] }

[dev-dependencies]
cucumber = { version = "0.21.1" }

[[test]]
name    = "main"
harness = true
