[package]
name        = "expenses_tracker"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "expenses tracker: self hosted budget and expenses tracker"

authors     = ["Ricardo Batista <ricardo.batista@hey.com>"]
categories  = ["expenses tracker"]

[dependencies]
axum        = { version = "0.8.1" }
tokio       = { version = "1.43.0", features = ["full"] }
sqlx        = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "macros", "migrate", "sqlite" ] }
derive_more = { version = "2.0.1", features = [ "from", "display" ] }

opentelemetry        = { version = "0.27.1" }
opentelemetry_sdk    = { version = "0.27.1" }
opentelemetry-stdout = { version = "0.27.0" }
opentelemetry-otlp   = { version = "0.27.0" }
tracing              = { version = "0.1.41" }
tracing-subscriber   = { version = "0.3.19", features = [ "std", "fmt", "json" ] }

[dev-dependencies]
cucumber = { version = "0.21.1" }

[[test]]
name    = "main"
harness = false
