[package]
name        = "expenses_tracker"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "expenses tracker: self hosted budget and expenses tracker"

authors     = ["Ricardo Batista <ricardo.batista@hey.com>"]
categories  = ["expenses tracker"]

[dependencies]
axum        = { version = "0.8.1", features =  ["tracing" ] }
tera        = { version = "1.20.0" }
tokio       = { version = "1.43.0", features = [ "full", "tracing" ] }
tower       = { version = "0.5.2" }
tower-http  = { version = "0.6.2", features = [ "trace", "compression-full", "decompression-full",
"timeout", "fs" ] }
sqlx        = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "macros", "migrate", "sqlite" ] }
derive_more = { version = "2.0.1", features = [ "from", "display" ] }
lazy_static = { version = "1.5.0" }

opentelemetry        = { version = "0.28.0" }
opentelemetry_sdk    = { version = "0.28.0" }
opentelemetry-stdout = { version = "0.28.0" }
opentelemetry-otlp   = { version = "0.28.0" }
tracing              = { version = "0.1.41" }
tracing-subscriber   = { version = "0.3.19", features = [ "std", "fmt", "json" ] }

[dev-dependencies]
cucumber = { version = "0.21.1" }

[[test]]
name    = "main"
harness = false
